# DEPACT_PACMatch

DEPACT_release/: .project  CMakeLists.txt  DEPACT_Protocol  analyzecontact.h  atomtypessmarts.h  bfdecoupling.h  buildpocket.h  fmmatches.h  mmmatches.h  myobxmlio.h  querynaturalliganddatabase.h  smartsfragments.h  statis_metal.h  twowaymatches.h
DEPACT_release/DEMO/AllNativePockets/: ATP.sdf  native_detail.txt  native_score.txt  out.txt  tarnat.sdf
DEPACT_release/DEMO/BFEstablishment/: bf_ncnc2_01.txt
DEPACT_release/DEMO/NativePocket/: ATP.sdf  nativescore.txt  np.par
DEPACT_release/DEMO/PocketDesign/: design_record.txt  err.txt  input.par  out.txt  pocket_details.txt  pocket_score.txt  target_bf.txt  template.sdf  tmplt_similarity.txt
DEPACT_release/bf_table/: basicfragments.txt  basicfragments.txt.4  basicfragments.txt.lssp3  bf_ATP_2.txt  bf_AZM_NCO_01.txt  bf_AZM_NSO_01.txt  bf_BEN_NCN_01.txt  bf_BTN_COO_01.txt  bf_C6_01.txt  bf_DMP_5.txt  bf_G39_c6_02.txt  bf_IPT_3.txt  bf_PGA_PO4_01.txt  contactcodes_CavBase.txt  contactcodes_CavBase.txt.bak  contactcodes_ct.txt  contactcodes_env.txt  getnative.sh  test.sh
DEPACT_release/bf_table/BF_4/: bf_DMP_3.txt  bf_STR_6.txt
DEPACT_release/bf_table/BF_6/: bf_AZM_NSO_01.txt  bf_DIH_CCC_02.txt
DEPACT_release/bf_table/BF_old/: bf_CHO_01.txt  bf_COC_01.txt  bf_CONH2_01.txt  bf_COO_02.txt  bf_CO_01.txt  bf_CO_02.txt  bf_CO_03.txt  bf_CSO_01.txt  bf_NH1_01.txt  bf_NH2CCCOO_01.txt  bf_NH2_01.txt  bf_OCOH_01.txt  bf_OCO_01.txt  bf_OHCOH_01.txt  bf_PO4_01.txt  bf_SCN_01.txt
DEPACT_release/cliquer/: Makefile  cl  set.h
DEPACT_release/dataio/: controlfile.h  parameters.h  splitstring.h
DEPACT_release/dataio/src/: CMakeLists.txt  controlfile.cpp  inputlines.cpp
DEPACT_release/dstl/: domaintree.h  dpclustering.h  nnregressionmodel.h  paretofront.h  pca.h  stlutil.h  tree.h
DEPACT_release/dstl/src/: CMakeLists.txt  domain.cpp  graph.cpp  nnregressionmodel.cpp
DEPACT_release/geometry/: atomsasa.h  calculators.h  fixendsloop.h  internalcrd.h  localframe.h  quatfit.h  relativeposition.h  spherepoints.h  structalign.h  xyz_xiongpeng.h
DEPACT_release/geometry/src/: CMakeLists.txt  atomsasa.cpp  calculators.cpp  geometry_python_module.cpp  line.cpp  loopccd.cpp  quaternioncrd.cpp  rigidtransform.cpp
DEPACT_release/include/LBFGS/: LBFGS_addstop.h  LineSearch_addstop.h
DEPACT_release/noob/: atomcontacts.h  atomtypes.h  basicfragment.h  contactcode.h  residuecontactscores.h  scorecontact.h  subsite.h  tmpltssas.h  xmlio.h
DEPACT_release/noob/src/: CMakeLists.txt  atomcontacts.cpp  atomtypes.cpp  basicfragment.cpp  combinesubsites.cpp  contactcode.cpp  residuecontactscores.cpp  scorecontact.cpp  subsite.cpp  tmpltssas.cpp  xmlio.cpp
DEPACT_release/proteinrep/: aminoacidseq.h  intatomkey.h  pdbreader.h
DEPACT_release/proteinrep/src/: CMakeLists.txt  aaconformer.cpp  pdbreader.cpp  pdbrecord.cpp
DEPACT_release/src/: CMakeLists.txt  atomtypessmarts.cpp  bfdecoupling.cpp  buildpocket.cpp  extendssas.cpp  fmmatches.cpp  mmmatches.cpp  myobxmlio.cpp  samplerefdist.cpp  smartsfragments.cpp  statis_metal.cpp
DEPACT_release/test/: CMakeLists.txt  analyze_iter.cpp  analyze_pocket_cavbase.cpp  analyze_pockets.cpp  analyze_pockets_bp.cpp  analyze_pool_cavbase.cpp  analyzecontacts.cpp  calcrefdistr.cpp  code2simi.cpp  contactstatistics.cpp  denovopocketdesign.cpp  extendkeyresidues.cpp  getallnativepockets.cpp  getcontactligandnames.cpp  getnativebydist.cpp  getnativepocket.cpp  mapsdf2bf.cpp  overall_pocket.cpp  overall_subpool.cpp  pdb2seq.cpp  pocket2code_CB.cpp  rankscaffold.cpp  readcrds.cpp  searchnative.cpp  statis_metal_pdbs.cpp  statis_metal_sdfs.cpp  targetbf.cpp  testatomtypes.cpp  testmain.cpp  testoverall.cpp  testsmartsfragment.cpp  testxml.cpp
PACMatch_release/backbone/src/: CMakeLists.txt  backbonealignment.cpp  backbonebuilder.cpp  backbonedata.cpp  backboneenergy.cpp  backbonelinker.cpp  backboneloop.cpp  backboneminimizer.cpp  backbonemoves.cpp  backbonesasa.cpp  backbonesite.cpp  backbonetorsionscore.cpp  backbonetrailmove.cpp  chainassembler.cpp  chainpack.cpp  chainpackminimizer.cpp  closealoop.cpp  closingloop.cpp  coresegments.cpp  energyfunctions.cpp  hbonded.cpp  linkerbuildercontrols.cpp  linkervendor.cpp  loopinteractions.cpp  mainchain.cpp  pepconformer.cpp  rminsef.cpp  scorepep.cpp  segments.cpp  torsionvectorscorer.cpp  torsionvectortree.cpp
PACMatch_release/backbone/test/: CMakeLists.txt  avcoursescore.cpp  backbonedecoys.cpp  checksefforloop.cpp  checksitesfile.cpp  clusterpepconformer.cpp  collectdecoys.cpp  compareloopscores.cpp  compareloopsef.cpp  comparelooptorsionscores.cpp  completechains.cpp  decomposesiteenergies.cpp  extractlooppdb.cpp  extractlooptochain.cpp  gaminimizer.cpp  generatedvsnativeloops.cpp  genloop.cpp  gentrialloops.cpp  hbgeometry.cpp  linkerbuilder.cpp  loophbsasa.cpp  nativelooptorsionscores.cpp  nativevsdecoyloops.cpp  optimizelinkedchain.cpp  paretoloopopt.cpp  scorecalc.cpp  sdminimizer.cpp  testalign.cpp  testbackbonebuilder.cpp  testbackboneenergy.cpp  testbackboneloop.cpp  testbackbonemove.cpp  testbackbonesasa.cpp  testchainassembler.cpp  testchainpackminimizer.cpp  testcoresegments.cpp  testenergyfunctions.cpp  testlinkervendor.cpp  testmainchain.cpp  testminimizer.cpp  (+3 more)
PACMatch_release/dataio/test/: CMakeLists.txt  exam.cpp  testcontrolfile.cpp  testinputlines.cpp  testsplitstring.cpp
PACMatch_release/designseq/src/: AAProbabilityArray.cpp  AASequence.cpp  Angles.cpp  AtomLib.cpp  AtomProperty.cpp  CMakeLists.txt  CmdArgs.cpp  Conformer.cpp  DesignParameters.cpp  DesignTemplate.cpp  EnergyArray.cpp  ProteinRep.cpp  Rotamer.cpp  S1EnergyTable.cpp  S2MatrixFinder.cpp  StringTool.cpp  StructureInfo.cpp
PACMatch_release/dstl/test/: CMakeLists.txt  testnbstree.cpp  testnestedcontainers.cpp  testparetofront.cpp  testpermutation.cpp  testsortidx.cpp  testtopn.cpp  testtree.cpp
PACMatch_release/geometry/test/: CMakeLists.txt  testcalculators.cpp  testcrdtree.cpp  testtransform.cpp
PACMatch_release/noob/test/: CMakeLists.txt  DEPACTClashSite.cpp  (+2 more)
(+232 files in other folders)
