#set(PROGRAMS mapsdf2bf targetbf getnativepocket denovopocketdesign getallnativepockets)
#set(PROGRAMS testsmartsfragment testatomtypes analyze_iter contactstatistics calcrefdistr getcontactligandnames mapsdf2bf targetbf overall_subpool overall_pocket searchnative analyze_pockets getnativepocket rankscaffold analyzecontacts extendkeyresidues readcrds pdb2seq getnativebydist analyze_pockets_bp analyze_pocket_cavbase analyze_pool_cavbase statis_metal_sdfs statis_metal_pdbs denovopocketdesign getallnativepockets pocket2code_CB code2simi)
#foreach(program ${PROGRAMS})
# add_executable(${program} ${program}.cpp)
# target_link_libraries(${program} combine openbabel cliquer)
#endforeach(program)

add_executable(DEPACTBFEstablishment mapsdf2bf.cpp)
target_link_libraries(DEPACTBFEstablishment combine openbabel cliquer)
add_executable(DEPACTTargetBF targetbf.cpp)
target_link_libraries(DEPACTTargetBF combine openbabel cliquer)
add_executable(DEPACTPocketDesign denovopocketdesign.cpp)
target_link_libraries(DEPACTPocketDesign combine openbabel cliquer)
add_executable(DEPACTNativePocket getnativepocket.cpp)
target_link_libraries(DEPACTNativePocket combine openbabel cliquer)
add_executable(DEPACTAllNativePockets getallnativepockets.cpp)
target_link_libraries(DEPACTAllNativePockets combine openbabel cliquer)