link_directories(${PROJECT_BINARY_DIR}/lib)
#add_executable(testlinkervendor testlinkervendor.cpp)
#add_executable(linkerbuilder linkerbuilder.cpp)
#add_executable(completechains completechains.cpp)
add_executable(hbgeometry hbgeometry.cpp)
add_executable(testbackbonesasa testbackbonesasa.cpp)
add_executable(loophbsasa loophbsasa.cpp)
add_executable(testbackboneloop testbackboneloop.cpp)
add_executable(nativevsdecoyloops nativevsdecoyloops.cpp)
#add_executable(collectdecoys collectdecoys.cpp)
add_executable(testmainchain testmainchain.cpp)
add_executable(checksitesfile checksitesfile.cpp)
add_executable(gentrialloops gentrialloops.cpp)
add_executable(testcoresegments testcoresegments.cpp)
add_executable(optimizelinkedchain optimizelinkedchain.cpp)
add_executable(paretoloopopt paretoloopopt.cpp)
add_executable(decomposesiteenergies decomposesiteenergies.cpp)
add_executable(testenergyfunctions testenergyfunctions.cpp)
add_executable(extractlooptochain extractlooptochain.cpp)
add_executable(genloop genloop.cpp)
add_executable(testalign testalign.cpp)
add_executable(testscorepep testscorepep.cpp)
add_executable(testbackboneenergy testbackboneenergy.cpp)
add_executable(testminimizer testminimizer.cpp)
add_executable(gaminimizer gaminimizer.cpp)
add_executable(testbackbonebuilder testbackbonebuilder.cpp)
add_executable(testchainpackminimizer testchainpackminimizer.cpp)
add_executable(backbonedecoys backbonedecoys.cpp)
#add_executable(testrandompepscore testrandompepscore.cpp)
add_executable(testtvscore testtvscore.cpp)
#add_executable(generatedvsnativeloops generatedvsnativeloops.cpp)
add_executable(compareloopscores compareloopscores.cpp)
add_executable(compareloopsef compareloopsef.cpp)
add_executable(checksefforloop checksefforloop.cpp)
add_executable(comparelooptorsionscores comparelooptorsionscores.cpp)
add_executable(extractlooppdb extractlooppdb.cpp)
add_executable(testchainassembler testchainassembler.cpp)
add_executable(testbackbonemove testbackbonemove.cpp)
add_executable(nativelooptorsionscores nativelooptorsionscores.cpp)
add_executable(scorecalc scorecalc.cpp)
add_executable(clusterpepconformer clusterpepconformer.cpp)
add_executable(avcoursescore avcoursescore.cpp)
#target_link_libraries (testlinkervendor backbone nsploopclosure nspproteinrep nspdataio nspgeometry nspdstl)
#target_link_libraries (linkerbuilder backbone nsploopclosure nspproteinrep nspdataio nspgeometry nspdstl)
#target_link_libraries (completechains backbone nsploopclosure nspproteinrep nspdataio nspgeometry nspdstl)
target_link_libraries (hbgeometry loop)
target_link_libraries (testbackbonesasa loop) 
target_link_libraries (testmainchain loop) 
target_link_libraries (checksitesfile loop) 
target_link_libraries (gentrialloops loop) 
target_link_libraries (testcoresegments loop) 
target_link_libraries (optimizelinkedchain loop) 
target_link_libraries (paretoloopopt loop) 
target_link_libraries (nativevsdecoyloops loop) 
target_link_libraries (decomposesiteenergies loop) 
target_link_libraries (testenergyfunctions loop) 
#target_link_libraries (collectdecoys loop) 
target_link_libraries (extractlooptochain loop) 
target_link_libraries (loophbsasa loop)
target_link_libraries (testbackboneloop loop)
target_link_libraries (testbackbonebuilder loop)
target_link_libraries (testbackboneenergy loop)
target_link_libraries (genloop loop)
target_link_libraries (testscorepep loop)
#target_link_libraries (testrandompepscore loop)
target_link_libraries (testbackbonemove loop)
target_link_libraries (testminimizer loop)
target_link_libraries (gaminimizer loop)
target_link_libraries (testchainpackminimizer loop)
target_link_libraries (backbonedecoys loop)
target_link_libraries (clusterpepconformer loop)
#target_link_libraries (generatedvsnativeloops loop)
target_link_libraries (compareloopscores loop)
target_link_libraries (nativelooptorsionscores loop)
target_link_libraries (comparelooptorsionscores loop)
target_link_libraries (compareloopsef loop)
target_link_libraries (checksefforloop loop)
target_link_libraries (testchainassembler loop)
target_link_libraries (extractlooppdb loop)
target_link_libraries (scorecalc loop)
target_link_libraries (avcoursescore loop)
target_link_libraries (testtvscore loop)
target_link_libraries (testalign loop)
