link_directories(${PROJECT_BINARY_DIR}/lib)
add_executable(testinputlines testinputlines.cpp)
add_executable(testcontrolfile testcontrolfile.cpp)
add_executable(testsplitstring testsplitstring.cpp)
add_executable(exam exam.cpp)
target_link_libraries (testinputlines nspdataio nspdstl)
target_link_libraries (testcontrolfile nspdataio nspdstl)
target_link_libraries (testsplitstring nspdataio nspdstl)
target_link_libraries (exam nspdataio nspdstl)
