link_directories(${PROJECT_BINARY_DIR}/lib)
add_executable(testtree testtree.cpp)
add_executable(testnbstree testnbstree.cpp)
add_executable(testpermutation testpermutation.cpp)
add_executable(testparetofront testparetofront.cpp)
add_executable(testnestedcontainers testnestedcontainers.cpp)
add_executable(testtopn testtopn.cpp)
add_executable(testsortidx testsortidx.cpp)
target_link_libraries (testnestedcontainers nspdstl)
target_link_libraries (testparetofront nspdstl nspgeometry)
target_link_libraries (testnbstree nspdstl)
