link_directories(${PROJECT_BINARY_DIR}/lib)
add_executable(testintatomkey testintatomkey.cpp)
add_executable(testpdbreader testpdbreader.cpp)
add_executable(testchaintree testchaintree.cpp)
add_executable(testaminoacidseq testaminoacidseq.cpp)
add_executable(testidealgeometries testidealgeometries.cpp)
add_executable(readpdbchains readpdbchains.cpp)
add_executable(clusterconformers clusterconformers.cpp)
target_link_libraries (testintatomkey nspproteinrep nspdataio)
target_link_libraries (testpdbreader loop)
target_link_libraries (readpdbchains loop)
target_link_libraries (clusterconformers loop)
target_link_libraries (testaminoacidseq nspproteinrep nspdataio)
target_link_libraries (testchaintree nspproteinrep nspdataio nspgeometry nspdstl backbone)
#target_link_libraries (estimatephipsidistr nspproteinrep nspdataio nspgeometry nspdstl)
target_link_libraries (testidealgeometries nspproteinrep nspdataio)
